--- a/wp-content/themes/law/assets/scss/contents/_editor.scss
+++ b/wp-content/themes/law/assets/scss/contents/_editor.scss
@@ -2,7 +2,7 @@
     white-space: inherit;
     word-wrap: break-word;
 
-    & > * {
+    &>* {
         &:last-child {
             margin-bottom: 0px;
         }
@@ -17,6 +17,7 @@
     h5,
     h6 {
         font-weight: 700;
+        color: #333333;
     }
 
     a {
@@ -105,27 +106,44 @@
             padding: 0px 15px;
         }
 
-        img {
-            border: none !important;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 100%;
-            height: 100%;
-            transform: translate(-50%, -50%) scale(1);
-            object-fit: cover;
-            transition: all 1s;
+        br {
+            display: none !important;
         }
 
-        a {
-            display: block;
-            position: relative;
-            height: 0px;
-            overflow: hidden;
-            padding-bottom: 100%;
+        .gallery-icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
-            @include media-breakpoint-up(lg) {
-                padding-bottom: 60%;
+            &>img {
+                position: static;
+                border: none !important;
+                transform: unset;
+            }
+
+            &>a {
+                display: block;
+                width: 100%;
+                position: relative;
+                height: 0px;
+                overflow: hidden;
+                padding-bottom: 100%;
+
+                @include media-breakpoint-up(lg) {
+                    padding-bottom: 60%;
+                }
+
+                &>img {
+                    border: none !important;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    width: 100%;
+                    height: 100%;
+                    transform: translate(-50%, -50%) scale(1);
+                    object-fit: cover;
+                    transition: all 1s;
+                }
             }
         }
     }
